[package]
name = "subtitles"
description = "A command line programme to generate SRT format subtitles for use in video players."
version = "0.1.2"
authors = ["progga"]
edition = "2018"
repository = "https://github.com/progga/subtitles"
homepage = "https://subtitles.codesetter.com"
license = "BSD-2-Clause"
keywords = ["closed-caption", "subtitle", "srt"]
categories = ["command-line-utilities", "text-processing", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
unicode-segmentation = "1.7.0"
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"
lto = true
